The book says which Java it means, and where the flag is needed (#915)
* The book says which Java it means, and where the flag is needed

The book said "Java 25 or later" in eight places and "Without
--enable-preview, your project will not compile" in the one readers are
sent to first. Neither survives contact with the artefacts.

Preview pins a release rather than setting a floor. javac accepts
--enable-preview only for the release it is running on, so a later JDK
cannot target 25 with preview enabled: `javac --release 24
--enable-preview` on a JDK 25 compiler already answers "invalid source
release 24 with --enable-preview". And 20 class files in hkj-core, all the
virtual-thread stream's parallel operations, carry minor version 65535, so
a JVM of any other version refuses them outright: running a consumer of
VStreamPar.merge without the flag gives "UnsupportedClassVersionError:
Preview features are not enabled for org/higherkindedj/hkt/vstream/
VStreamPar (class file version 69.65535)".

The blanket compile claim is the other way round. A consumer using Either
compiles and runs on Java 25 with no flag at all, as does one using the
plain VStream operations; measured both. The flag is needed by the code
that loads the preview-marked classes, at compile time and again at run
time, and the build plugins add it everywhere so nobody has to work out
which of their code reaches them.

So the Prerequisites section now states the release, the reason it is a
release and not a floor, both error messages a reader will actually meet,
and where the flag genuinely matters. The support claims on the tutorials
intro, the troubleshooting page, the VTask journey, the scoped-value page
and the context comparison follow it. The manual setup page says why its
release and its flag travel together, which is the question its pinned
release 25 raises.

Left alone: the two statements about when a JDK feature became standard
("module imports require --enable-preview on Java 23-24"), which are